--- a/contact/index.html
+++ b/contact/index.html
@@ -70,6 +70,13 @@
         <li><a target="_blank" href="https://people.epfl.ch/tiberiu.musat">Tiberiu Mușat</a></li>
         <li><a target="_blank" href="http://mircea.rebengiuc.com/">Mircea Rebengiuc</a></li>
       </ul>
+      <h1 class="mt-5">Cod sursa</h1>
+	  <hr>
+		<p>Tot codul sursă din spatele acestui proiect este disponibil public și acceptă contribuții pe GitHub:
+      <ul>
+        <li><a target="_blank" href="https://github.com/Tiberiu02/bacplus-website">Cod website</a></li>
+        <li><a target="_blank" href="https://github.com/Tiberiu02/bacplus-data">Cod generare statistici</a></li>
+      </ul>
 	</div>
 
 	<div class="mt-auto">
